# piorka

./: .gitignore
backend/: Dockerfile  pyproject.toml
backend/core/: urls.py
backend/core/settings/: base.py  dev.py  production.py
backend/home/: apps.py  decorators.py  middleware.py  models.py  signals.py  stripe_sync.py  views.py
backend/home/api/: __init__.py  serializers.py  urls.py  views.py  webhooks.py
backend/home/management/commands/: sync_stripe_products.py
backend/home/migrations/: 0005_product_cena_product_dla_kogo_and_more.py  0006_alter_product_active_alter_product_cena_and_more.py  0012_alter_product_dlugosc_kategoria_and_more.py  0013_alter_product_dlugosc_kategoria_and_more.py  0015_alter_productimage_image.py  0019_alter_product_slug.py  0020_event_external_url.py  0022_product_sold_at_product_status_and_more.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: App.tsx
